base/v1/networking-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: portfolio-svc
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: essi-app
